resources/testcases_static_checks/tests/positive/isWeaklyFrontierGuarded/unguarded-cq-entailment-1.rls
../../../tests_common_data/rule-classification-examples/unguarded-cq-entailment-1.rls