resources/testcases_static_checks/tests/negative/isDatalog/oblivious-non-terminating-1.rls
../../../tests_common_data/rule-classification-examples/oblivious-non-terminating-1.rls